@@ -7,8 +7,8 @@ extern class ConvolutionFilter extends BitmapFilter {
 	var color : UInt;
 	var divisor : Float;
 	var matrix : Array<Dynamic>;
-	var matrixX : Float;
-	var matrixY : Float;
+	var matrixX : Int;
+	var matrixY : Int;
 	var preserveAlpha : Bool;
 	function new(?matrixX : Float, ?matrixY : Float, ?matrix : Array<Dynamic>, ?divisor : Float, ?bias : Float, ?preserveAlpha : Bool, ?clamp : Bool, ?color : UInt, ?alpha : Float) : Void;
 }
